<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_blue"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tvTit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:text="@string/resultado"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="32dp"
        app:cardBackgroundColor="@color/cv__blue"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRCalc"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_normal"
                android:textSize="26sp"
                android:textColor="@color/bluemid"
                />

            <TextView
                android:id="@+id/tvIMC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IMC"
                android:layout_marginVertical="54dp"
                android:textSize="70sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normalW"
                android:textSize="26sp"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRCalc"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/boton2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/middle_night"
        />

</androidx.constraintlayout.widget.ConstraintLayout>